--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,6 @@ a:hover {
   }
 }
 
-/*Block*/
 .bg {
   background: url(../images/search_fon.png) no-repeat;
   background-size: 100%;
@@ -1205,6 +1204,175 @@ a:hover {
   display: flex;
   align-items: flex-start;
   margin-right: 10px;
+}
+
+/*banner*/
+.banner {
+  background: rgba(255, 255, 255, 0.6);
+  border: 7px solid #32B28C;
+  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.1);
+  padding: 40px 0;
+}
+
+.banner.pc {
+  padding: 50px 0;
+  margin-bottom: 150px;
+}
+
+.banner.pc .banner__title {
+  font-weight: 700;
+  font-size: 36px;
+  margin-bottom: 57px;
+}
+
+.banner.pc .banner__button {
+  width: 618px;
+  height: 107px;
+  font-weight: 600;
+  font-size: 25px;
+  max-width: 100%;
+}
+
+.banner.pc .banner__button span {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .banner.pc {
+    display: none;
+  }
+}
+
+.banner.mobi {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .banner.mobi {
+    display: block;
+  }
+}
+
+.banner__title {
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 30px;
+  margin-bottom: 28px;
+  color: #32b28c;
+  text-align: center;
+  letter-spacing: -1px;
+}
+
+.banner__button {
+  background: #32b28c;
+}
+
+/*.know */
+.know {
+  margin-top: 200px;
+}
+
+@media screen and (max-width: 1280px) {
+  .know {
+    margin-top: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .know {
+    background: #f5f7fd;
+    padding: 35px 0 70px;
+    margin-top: 0;
+  }
+}
+
+.know__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.know__images {
+  display: flex;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+
+.know__title {
+  color: #4466bc;
+  margin-bottom: 60px;
+}
+
+@media screen and (max-width: 1280px) {
+  .know__title {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .know__title {
+    font-weight: 600;
+    font-size: 22px;
+    letter-spacing: 0;
+    padding: 0 10px;
+    margin-bottom: 36px;
+  }
+}
+
+.know__item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.know__item:last-child {
+  margin: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .know__item {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .know__item {
+    margin-bottom: 30px;
+  }
+}
+
+.know__number {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-shrink: 0;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  background: #4466bc;
+  font-weight: 600;
+  font-size: 36px;
+  color: #fff;
+  margin-right: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .know__number {
+    width: 40px;
+    height: 40px;
+    font-size: 22px;
+  }
+}
+
+.know__text {
+  font-weight: 500;
+  font-size: 18px;
+}
+
+@media screen and (max-width: 768px) {
+  .know__text {
+    font-weight: 400;
+    font-size: 16px;
+  }
 }
 
 /*Wrapper*/
@@ -3334,6 +3502,14 @@ a:hover {
   color: #8f8f8f;
   font-weight: 500;
   font-size: 12px;
+  position: relative;
+  left: -43px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__copy {
+    left: 0;
+  }
 }
 
 .footer .mobi {
@@ -3823,175 +3999,7 @@ a:hover {
   }
 }
 
-/*banner*/
-.banner {
-  background: rgba(255, 255, 255, 0.6);
-  border: 7px solid #32B28C;
-  box-shadow: 5px 5px 6px rgba(0, 0, 0, 0.1);
-  padding: 40px 0;
-}
-
-.banner.pc {
-  padding: 50px 0;
-  margin-bottom: 150px;
-}
-
-.banner.pc .banner__title {
-  font-weight: 700;
-  font-size: 36px;
-  margin-bottom: 57px;
-}
-
-.banner.pc .banner__button {
-  width: 618px;
-  height: 107px;
-  font-weight: 600;
-  font-size: 25px;
-  max-width: 100%;
-}
-
-.banner.pc .banner__button span {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-  .banner.pc {
-    display: none;
-  }
-}
-
-.banner.mobi {
-  display: none;
-}
-
-@media screen and (max-width: 768px) {
-  .banner.mobi {
-    display: block;
-  }
-}
-
-.banner__title {
-  font-weight: 700;
-  font-size: 22px;
-  line-height: 30px;
-  margin-bottom: 28px;
-  color: #32b28c;
-  text-align: center;
-  letter-spacing: -1px;
-}
-
-.banner__button {
-  background: #32b28c;
-}
-
-/*.know */
-.know {
-  margin-top: 200px;
-}
-
-@media screen and (max-width: 1280px) {
-  .know {
-    margin-top: 150px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .know {
-    background: #f5f7fd;
-    padding: 35px 0 70px;
-    margin-top: 0;
-  }
-}
-
-.know__inner {
-  display: flex;
-  justify-content: space-between;
-}
-
-.know__images {
-  display: flex;
-  align-items: flex-start;
-  flex-shrink: 0;
-}
-
-.know__title {
-  color: #4466bc;
-  margin-bottom: 60px;
-}
-
-@media screen and (max-width: 1280px) {
-  .know__title {
-    margin-bottom: 30px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .know__title {
-    font-weight: 600;
-    font-size: 22px;
-    letter-spacing: 0;
-    padding: 0 10px;
-    margin-bottom: 36px;
-  }
-}
-
-.know__item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 40px;
-}
-
-.know__item:last-child {
-  margin: 0;
-}
-
-@media screen and (max-width: 1280px) {
-  .know__item {
-    margin-bottom: 20px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .know__item {
-    margin-bottom: 30px;
-  }
-}
-
-.know__number {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  width: 70px;
-  height: 70px;
-  border-radius: 50%;
-  background: #4466bc;
-  font-weight: 600;
-  font-size: 36px;
-  color: #fff;
-  margin-right: 30px;
-}
-
-@media screen and (max-width: 768px) {
-  .know__number {
-    width: 40px;
-    height: 40px;
-    font-size: 22px;
-  }
-}
-
-.know__text {
-  font-weight: 500;
-  font-size: 18px;
-}
-
-@media screen and (max-width: 768px) {
-  .know__text {
-    font-weight: 400;
-    font-size: 16px;
-  }
-}
-
+/*permanent-staff*/
 .permanent-staff {
   margin-bottom: 100px;
 }
@@ -4063,5 +4071,167 @@ a:hover {
   .permanent-staff .know__images {
     width: 354px;
     margin: 0 auto;
+  }
+}
+
+/*main-performers*/
+.main-performers {
+  overflow: hidden;
+  padding-top: 130px;
+}
+
+@media screen and (max-width: 991px) {
+  .main-performers {
+    padding-top: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-performers {
+    padding: 0;
+  }
+}
+
+.main-performers .main-employer__images {
+  bottom: 0px;
+}
+
+.main-performers .main-employer__images span {
+  display: flex;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 991px) {
+  .main-performers .main-employer__images {
+    width: 100%;
+    justify-content: center;
+  }
+}
+
+.main-performers .main-employer__images .mobi {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .main-performers .main-employer__images .mobi {
+    display: flex;
+    width: 334px;
+    position: relative;
+    bottom: -120px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-performers .main-employer__images .pc {
+    display: none;
+  }
+}
+
+.main-performers .main-employer__inner {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 991px) {
+  .main-performers .main-employer__inner {
+    display: flex;
+    justify-content: center;
+    grid-gap: 0;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .main-performers .main-employer__title {
+    display: none;
+  }
+}
+
+/*lexible-shifts*/
+.flexible-shifts__title {
+  margin: 60px 0;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .flexible-shifts__title {
+    margin: 40px 0;
+  }
+}
+
+.flexible-shifts__items {
+  display: flex;
+  align-items: flex-start;
+}
+
+.flexible-shifts__item {
+  background: #fff;
+  padding: 40px 40px 0 40px;
+  border: 1px solid #E9E9E9;
+}
+
+@media screen and (max-width: 768px) {
+  .flexible-shifts__item {
+    border: 0;
+    padding: 0;
+    width: 100%;
+  }
+}
+
+.flexible-shifts__map {
+  display: flex;
+  align-items: flex-end;
+}
+
+@media screen and (max-width: 768px) {
+  .flexible-shifts__map {
+    display: none;
+  }
+}
+
+.flexible-shifts__button {
+  background: #32b28c;
+  border-radius: 115px;
+  width: 432px;
+  height: 64px;
+  font-weight: 600;
+  font-size: 20px;
+  margin: 35px 0 40px 0;
+}
+
+@media screen and (max-width: 768px) {
+  .flexible-shifts__button {
+    margin: 40px auto;
+    width: 289px;
+    height: 50px;
+    font-weight: 500;
+    font-size: 12px;
+  }
+}
+
+.flexible-shifts .card-work {
+  border: 2px solid #E9E9E9;
+  border-radius: 15px;
+  box-shadow: none;
+}
+
+/*solutions-performers*/
+.solutions__items {
+  display: grid;
+  grid-gap: 46px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+@media screen and (max-width: 768px) {
+  .solutions__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .solutions-performers {
+    background: #f5f7fd;
+    grid-gap: 50px;
   }
 }
