--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4260,3 +4260,140 @@ a {
     align-self: center;
   }
 }
+
+//! questions
+/*questions*/
+.questions {
+  padding: 136px 0;
+
+  @media screen and (max-width: 768px) {
+    padding: 40px 0 ;
+  }
+
+  &__title {
+    text-align: center;
+    margin-bottom: 100px;
+    color:$blue;
+    font-weight: 600;
+
+    @media screen and (max-width: 768px) {
+      font-weight: 700;
+      font-size: 30px;
+      margin-bottom: 40px;
+    }
+  }
+
+  &__body {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+    padding: 35px 30px;
+    margin-bottom: 30px;
+
+    &:last-child{
+      margin-bottom: 0;
+    }
+
+    @media screen and (max-width: 768px) {
+      padding: 20px;
+      margin-bottom: 23px;
+    }
+  }
+
+  &__header {
+    font-weight: 400;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .questions__arrow{
+      .arrow-blue{
+        opacity: 0;
+      }
+    }
+
+    &.active{
+      color: $blue;
+
+      .questions__arrow{
+        .arrow{
+          display: none;
+          opacity: 0;
+          visibility: hidden;
+        }
+        .arrow-blue{
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  &__description {
+    font-weight: 600;
+    font-size: 24px;
+    padding-right: 10px;
+
+    @media screen and (max-width: 768px) {
+      font-weight: 500;
+      font-size: 16px;
+    }
+  }
+
+  &__arrow {
+    display: flex;
+    align-items: flex-start;
+    flex-shrink: 0;
+    width: 34px;
+    transition: 300ms;
+    img{
+      width: 100%;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 15px;
+    }
+  }
+
+  &__text {
+    border-top: 2px solid $blue;
+    padding-top: 30px;
+    margin-top: 30px;
+
+    p{
+      margin-bottom: 35px;
+      &:last-child{
+        margin-bottom: 0;
+      }
+    }
+
+    span{
+      color: $blue;
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-top: 20px;
+      padding-top: 20px;
+      font-weight: 500;
+      font-size: 16px;
+    }
+  }
+
+  .second{
+    margin-top: 136px;
+    @media screen and (max-width: 768px) {
+      margin-top: 40px;
+    }
+  }
+
+  .red{
+    color: $red;
+  }
+  .orange{
+    color: $orange;
+  }
+  .green{
+    color: $green;
+  }
+}
+
